[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="level" type="Node2D" parent="."]

[node name="GUI" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="load_room" type="Button" parent="GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 512.0
margin/right = 421.0
margin/bottom = 552.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Instance room node and add it as a child of root node"
flat = false

[node name="reload" type="Button" parent="GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 56.0
margin/top = 451.0
margin/right = 423.0
margin/bottom = 491.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "clear everything"
flat = false

[node name="reload_room" type="Button" parent="GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 511.0
margin/top = 482.0
margin/right = 944.0
margin/bottom = 520.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Unparent room node, and add it again as a child of the same node"
flat = false

[node name="reload_navigation" type="Button" parent="GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 509.0
margin/top = 532.0
margin/right = 942.0
margin/bottom = 570.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Unparent navigation node, and add it again as a child of the same node"
flat = false

[node name="reload_tilemap" type="Button" parent="GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 509.0
margin/top = 429.0
margin/right = 957.0
margin/bottom = 467.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Unparent tilemap node, and add it again as a child of the same node"
flat = false

[connection signal="pressed" from="GUI/load_room" to="." method="_on_load_room_pressed"]

[connection signal="pressed" from="GUI/reload" to="." method="_on_reload_pressed"]

[connection signal="pressed" from="GUI/reload_room" to="." method="_on_reload_room_pressed"]

[connection signal="pressed" from="GUI/reload_navigation" to="." method="_on_reload_navigation_pressed"]

[connection signal="pressed" from="GUI/reload_tilemap" to="." method="_on_reload_tilemap_pressed"]


